--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="hero">
         <div class="heor-left">
             <h1 class="hero-title">
-                Interior Design That <br>
+                Interior Design That <br class="title-break">
                 Care About Details
             </h1>
             <button class="hero-btn">LEARN MORE</button>
